examples/infographic/infographic.css
.infographic-container {
  background-color: #fff;
  border: 1px solid #b2ada7;
  margin: 0 auto;
  max-width: 55em;
  min-height: 31em;
  overflow: hidden;
  padding-left: 1em;
  padding-right: 1em;
  position: relative;
}

.slide {
  background-color: #eee;
  bottom: 4.25em;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 11;
}

@media screen and (max-width: 48.125em) {
  .slide {
    bottom: 7.5em;
  }
}

.slide.off {
  z-index: 10;
}

.slide-content {
  padding: 2em;
}

.slide-content p {
  font-size: 1.5em;
  text-align: center;
}

.slide-content .lead {
  font-size: 1.85em;
}

.slide-content .icon-big {
  font-size: 4em;
}

.slide-frame {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.slide-nav {
  background-color: #fff;
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
  z-index: 14;
}
.slide-nav .limit {
  display: none;
}

.btn-previous {
  background-color: #fff;
  border: 1px solid #008198;
  color: #008198;
  float: left;
  margin: .75em 0 .75em 1em;
  padding: .5em 1.25em;
}

@media screen and (min-width: 48.125em) {
  .btn-previous {
    position: absolute;
    bottom: 0;
    left: 0;
  }
}

.btn-previous:visited {
  color: #008198;
}

.btn-previous:hover,
.btn-previous:focus {
  background-color: #008198;
  border-color: #008198;
  color: #fff;
}

.btn-next {
  background-color: #008198;
  border: 1px solid #fff;
  color: #fff;
  float: right;
  margin: .75em 1em .75em 0;
  padding: .5em 1.25em;
}

@media screen and (min-width: 48.125em) {
  .btn-next {
    position: absolute;
    bottom: 0;
    right: 0;
  }
}

.btn-next:visited {
  color: #fff;
}

.btn-next:hover,
.btn-next:focus {
  background-color: #fff;
  border-color: #008198;
  color: #008198;
}

.dot-nav {
  display: block;
  list-style-type: none;
  margin: 1em auto .5em;
  max-width: 19em;
  text-align: center;
}

@media screen and (min-width: 48.125em) {
  .dot-nav {
    margin-bottom: 1em;
  }
}

.dot-nav li {
  display: inline;
}

.dot-nav a {
  background-color: #fff;
  border: 1px solid #b2ada7;
  border-radius: .25em;
  color: #222;
  display: inline-block;
  line-height: 1;
  padding: .4em .5em .5em;
  width: 2em;
  text-decoration: none;
  transition: all .3s;
}

.dot-nav a:visited {
  color: #222;
}

.dot-nav a.current,
.dot-nav a:hover,
.dot-nav a:focus {
  background-color: #008198;
  color: #fff;
  transition: all .3s;
}






.lightbox-container.backdrop {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #222;
}

.lightbox-content {
  background-color: #fff;
  padding: 1em;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 2em 4em;
  z-index: 13;
}

@media screen and (max-width: 48.125em) {
  .lightbox-content {
    padding: .5em;
    margin: 1em 3em;
  }
}

.lightbox-content p {
  font-size: 2em;
  padding: 1em;
}

@media screen and (max-width: 48.125em) {
  .lightbox-content .space-top-3 {
    margin-top: 0;
  }
}

@media screen and (max-width: 48.125em) {
  .small-hide {
    display: none;
  }
}

@media screen and (max-width: 48.125em) {
  .lightbox-content h2 {
    font-size: 1.35em;
  }
}

@media screen and (max-width: 48.125em) {
  .lightbox-content p {
    font-size: 1em;
  }
}

.lightbox-off {
  display: none;
}

.lightbox-close-block {
  position: absolute;
  bottom: 1em;
  left: 43%;
}

@media screen and (max-width: 48.125em) {
  .lightbox-close-block {
    left: 36%;
  }
}

.lightbox-nav-control {
  background-color: #7ac142;
  border-radius: .25em;
  color: #fff;
  display: none;
  font-size: 2em;
  margin: .25em;
  padding: .1em .25em;
  position: absolute;
  text-decoration: none;
  top: 45%;
  transition: all .3s;
}

@media screen and (max-width: 48.125em) {
  .lightbox-nav-control {
    font-size: 1.5em;
  }
}

.lightbox-nav-control:visited {
  color: #222;
}

.lightbox-nav-control:hover {
  background-color: #fff;
  color: #222;
  transition: all .3s;
}

.lightbox-nav-control:focus {
  background-color: #7ac142;
  color: #222;
  transition: all .3s;
}

.backdrop .lightbox-nav-control {
  display: block;
}

.backdrop .lightbox-nav-control.limit {
  display: none;
}

#lightbox-nav-next {
  right: 0;
}

#lightbox-nav-previous {
  left: 0;
}

.in-1 {
  opacity: 1;
  transition: opacity 1s;
}

.off .in-1 {
  opacity: 0;
  transition: opacity 1s;
}

.in-2 {
  opacity: 1;
  transition: opacity 1s;
  transition-delay: 1s;
}

.off .in-2 {
  opacity: 0;
  transition: opacity 1s;
}

.in-3 {
  opacity: 1;
  transition: opacity 1s;
  transition-delay: 1s;
}

.off .in-3 {
  opacity: 0;
  transition: opacity 1s;
}


.slide-5-content .hotspot-1 {
  top: 16%;
  left: 51%;
}

.slide-5-content .hotspot-2 {
  top: 42%;
  left: 6%;
}

.slide-5-content .hotspot-3 {
  top: 69%;
  left: 47%;
}

.slide-5-content .hotspot-4 {
  top: 78%;
  left: 65%;
}

.slide-5-content .hotspot-title {
  position: absolute;
  top: 0;
  left: 0;
  padding: .5em 1em;
}

@media screen and (min-width: 46.8em) {
  .slide-5-content .hotspot-title {
    left: .5em;
    top: .5em;
    width: 13em;
  }
}

.slide-5-content .hotspot-title h2 {
  background-color: #000;
  background-color: rgba(0, 0, 0, .5);
  color: #fff;
  font-size: 1.5em;
  font-weight: 400;
  line-height: 1.5;
  padding: .5em;
  text-align: center;
}

@media screen and (max-width: 48.125em) {
  .slide-5-content .hotspot-title h2 {
    font-size: 1em;
  }
}

.slide-5-content {
  background-color: #fff;
  background-image: url('/public/img/photo-example.jpg');
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}

@media screen and (max-width: 48.125em) {
  .slide-5-content {
    background-position: center bottom;
    background-size: contain;
  }
}

.slide-final h2 {
  font-size: 2em;
  font-weight: 400;
  margin-bottom: 2em;
  margin-top: 1em;
  text-align: center;
}

.hotspot {
  position: absolute;
}

@media screen and (max-width: 48.125em) {
  .hotspot {
    display: none;
  }
}

.hotspot a {
  background-color: #fff;
  border: 1px solid #b2ada7;
  border-radius: .75em;
  color: #7ac142;
  display: block;
  font-size: 3em;
  height: 44px;
  line-height: .7;
  text-decoration: none;
  width: 44px;
  text-align: center;
  transition: all .5s;
}

@media screen and (min-width: 89em) {
  .hotspot a {
    line-height: .5;
  }
}

.hotspot a:visited {
  color: #7ac142;
}

.hotspot a:hover,
.hotspot a:focus {
  background-color: #7ac142;
  color: #fff;
  transition: all .5s;
}

.desc {
  display: block;
  text-indent: -9999px;
}

.small-lightbox-toggle {
  margin-top: 1em;
}

@media screen and (min-width: 48.125em) {
  .small-lightbox-toggle {
    display: none;
  }
}

.bottom {
  bottom: 0;
}

.slide.off .btn-sharing,
.slide.off .btn-start,
.slide.off .hotspot,
.backdrop-on .hotspot {
  display: none;
}

